add comments and auth/me
